# data-worldgen

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.synthetic_generator_lambda  README.md  docker-compose.localstack.yml  pyproject.toml
.github/workflows/: ci_test_and_lint.yml  run_tests.yml
examples/spatial_data_generation/: README.md  austin_small.json  city_flat_example.py  earth_small.json  galaxy_world_medium.json  multiscale_world_example.py  render_example.py
examples/world_builder/: CONFIG_README.md  ecosystem_config.json  ecosystem_example.py  ecosystem_walkthrough.ipynb  example_net_worth.py  example_net_worth_config.json  plot_ecosystem.py  wb_benchmark.py  wb_cloudwatch_agent.json  wb_config.json  wb_example.py  wb_extended_config.json  wb_extended_example.py  wb_s3_example.py
infra/: .gitignore
infra/world_builder/: PRD-serverless-event-pipeline.md  README.md
perf/: PERFORMANCE_v0.2.0.md  PERFORMANCE_v0.3.0.md  PERFORMANCE_v0.4.0.md  benchmark_population.py  benchmark_v0.1.0.csv  benchmark_v0.2.0.csv  benchmark_v0.3.0.csv  benchmark_v0.4.0.csv
src/data_export/: exporter.py  s3_upload.py
src/namegen/: __init__.py  example_build_models.py  first_name_generator.py  first_name_markov_model_F.json  first_name_markov_model_M.json  model_builder.py  planets_list.py  surname_generator.py  surname_suffix_list.py  us_name_eda.ipynb
src/spatial_data_generation/: SPATIAL_DATA_CODING_SPEC.md  SPATIAL_DATA_OVERVIEW.md  SPATIAL_IMPLEMENTATION_PLAN.md  __init__.py  city_flat.py  config_models.py  models.py  reader.py  scenarios.py  semantic_validation.py  visualize.py
src/world_builder/: NET_WORTH_CONFIG.md  __init__.py  age.py  batch_local.py  batch_s3.py  chain_code.py  character.py  config_loader.py  distributions_config.py  exceptions.py  lambda_synthetic_worker.py  net_worth_config.py  net_worth_generator.py  population_config.py  population_dashboard.py  visualizer.py
test/: conftest.py
test/data_export/: test_exporter.py
test/integration/: README.md  test_localstack_sns_sqs.py
(+75 files in other folders)
