[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-worldgen"
version = "0.1.0"
description = "A world generation toolkit"

readme = "README.md"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "streamlit",
    "altair",
    "matplotlib",
    "pydantic>=2.0.0",
    "pyarrow",
    "beautifulsoup4",
    "requests",
    "pytest",
    "pylint"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint]
max-line-length = 100
disable = [
    "R0903",
]
fail-under = 7.0