[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-worldgen"
version = "0.2.0"
description = "A world generation toolkit"

readme = "README.md"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "streamlit",
    "altair",
    "matplotlib",
    "pydantic>=2.0.0",
    "pyarrow",
    "beautifulsoup4",
    "requests",
    "pytest",
    "pylint",
    "boto3",
    "botocore",
    "moto[s3,sqs]>=5.0.0"
]

[tool.pytest.ini_options]
markers = [
    "integration: optional tests requiring LocalStack or manual setup (set LOCALSTACK_ENDPOINT)",
]

[project.scripts]
worldgen-batch = "world_builder.batch_s3:main"
worldgen-batch-local = "world_builder.batch_local:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint]
max-line-length = 100
disable = [
    "R0903",
]
fail-under = 7.0